...
    </string-array>


    <!-- Values -->
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Confirm_email">Confirm email</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="return_to_login">Return to Login</string>

    <string name="mood_following">Mood Following</string>
    <string name="mood_map">Mood Map</string>
    <string name="search">Search</string>
    <string name="user_profile">User Profile</string>
    <string name="user">User</string>
    <string name="date_and_time">Date and Time</string>
    <string name="emoticon">Emoticon</string>
    <string name="alone">Alone</string>
    <string name="reason_why_text">Reason why text</string>
    <string name="mood_photo">Mood photo</string>
...
    <string name="my_mood_history">My Mood History</string>
    <string name="my_personal_journal">My Personal Journal</string>
    <string name="follow_requests">Follow Requests</string>
    <string name="home">Home</string>

    <!--  Mood list content  -->
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="requested">Requested</string>

    <!--add mood form strings-->
    <string name="back">Back</string>
    <string name="insert_image">Insert Image</string>
    <string name="hint_reason_why_text">Why do you feel this way?</string>
...
