<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back"
            android:scaleType="fitCenter"
            android:src="@drawable/left_arrow"
            app:tint="@color/black" />

    </LinearLayout>

    <ListView
        android:id="@+id/listviewFollowRequests"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/EmptyFollowRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="36dp"
        android:text="No Follow Requests"/>

</LinearLayout>
