...
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"

        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/login"
        android:textColor="#000000"
...
